samples/_failures_safe/1761077226_282fa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_befc7ef1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_befc7ef1.c:178:9: error: expected declaration or statement at end of input
  178 |         tokens[token_count].type = TOKEN_EOF;
      |         ^~~~~~
./samples/SAFE/__tmp_befc7ef1.c:178:9: error: expected declaration or statement at end of input
